Added htmlmin directives for including the request page styles.

--- a/html/app/request.html
+++ b/html/app/request.html
@@ -2,11 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
+
     <title>Media Player - Request</title>
+
     <meta name="description" content="Garry's Mod Media Player request page.">
     <meta name="keywords" content="garrysmod,media,player,request,search,youtube,vimeo,twitch,livestream,blip,reddit">
     <meta name="author" content="pixelTail Games">
-    <link href="styles/request.css" rel="stylesheet" type="text/css">
+
+    <!-- build:css(.tmp) styles/request.css -->
+    <link rel="stylesheet" href="styles/request.css">
+    <!-- endbuild -->
 </head>
 <body>
 
