Moved logo styles into the css files for the cache renaming to work.

--- a/html/app/request.html
+++ b/html/app/request.html
@@ -22,54 +22,48 @@
 
             <div class="services">
 
-                <span class="media-service"
+                <span class="media-service logo-youtube"
                       data-href="http://www.youtube.com/"
                       data-name="YouTube"
                       data-service="yt"
-                      style="background-image:url(images/logos/youtube.png);"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">&nbsp;</span>
 
-                <span class="media-service subtext"
+                <span class="media-service subtext logo-twitch"
                       data-href="http://www.twitch.tv/"
                       data-name="Twitch"
                       data-service="twv twl"
-                      style="background-image:url(images/logos/twitch.png);"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">&nbsp;</span>
 
-                <span class="media-service subtext"
+                <span class="media-service subtext logo-shoutcast"
                       data-href="http://www.gmtower.org/apps/radio/"
                       data-name="SHOUTcast"
                       data-service="shc"
-                      style="background-image:url(images/logos/shoutcast.png);"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">SHOUTcast</span>
 
                 <br>
 
-                <span class="media-service subtext"
+                <span class="media-service subtext logo-soundcloud"
                       data-href="http://soundcloud.com/search"
                       data-name="SoundCloud"
                       data-overlay="true"
                       data-service="sc"
-                      style="background-image:url(images/logos/soundcloud.png);"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">&nbsp;</span>
 
-                <span class="media-service subtext"
+                <span class="media-service subtext logo-reddit"
                       data-href="http://www.reddit.com/r/videos/"
                       data-name="/r/videos"
                       data-service="yt"
-                      style="background-image:url(images/logos/reddit.png);"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">Videos</span>
 
-                <span class="media-service subtext"
+                <span class="media-service subtext logo-reddit"
                       data-href="http://www.reddit.com/r/fullmoviesonyoutube/"
                       data-name="/r/fullmoviesonyoutube"
                       data-service="yt"
-                      style="background-image:url(images/logos/reddit.png);"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">FullMoviesOnYouTube</span>
 
