--- a/html/app/request.html
+++ b/html/app/request.html
@@ -85,60 +85,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
-    <script>
-    /**
-     * Called when the user presses a key while focused on the URL input
-     * text box.
-     *
-     * @param  {KeyboardEvent} event Keyboard event.
-     */
-    function onUrlKeyDown(event) {
-        var key = event.keyCode || event.which;
-
-        // submit request when the enter key is pressed
-        if (key === 13) {
-            requestUrl();
-        }
-    }
-
-    /**
-     * Called when the user either clicks the URL request button or presses
-     * enter on it.
-     */
-    function requestUrl() {
-        var elem = document.getElementById('urlinput'),
-            url = elem.value;
-
-        if (url.length === 0) { return; }
-
-        gmod.requestUrl(url);
-    }
-
-    /**
-     * Called when a user hovers over a service icon.
-     */
-    function hoverService() {
-        console.log( "PLAY: garrysmod/ui_hover.wav" );
-    }
-
-    /**
-     * Called when a user selects a service to navigate to.
-     *
-     * @param  {HTMLElement} elem DOM element.
-     */
-    function selectService(elem) {
-        console.log( "PLAY: garrysmod/ui_click.wav" );
-
-        var href = elem.dataset.href,
-            overlay = (elem.dataset.overlay !== undefined);
-
-        if (overlay) {
-            gmod.openUrl(href);
-        } else {
-            window.location.href = href;
-        }
-    }
-    </script>
+    <!-- build:js({app,.tmp}) scripts/request.js -->
+    <script src="scripts/request.js"></script>
+    <!-- endbuild -->
 
 </body>
 </html>
