Added YouTube start time support.

--- a/html/app/youtube.html
+++ b/html/app/youtube.html
@@ -39,7 +39,8 @@
     var query = getQueryParams(document.location.search);
 
     var MEDIAPLAYER_VIDEO_ID = query.v || '5fSH8shWo_U',
-        MEDIAPLAYER_IS_TIMED = (query.timed === '0') ? false : true;
+        MEDIAPLAYER_IS_TIMED = (query.timed === '0') ? false : true,
+        MEDIAPLAYER_START_SEC = query.start ? parseInt(query.start, 10) : undefined;
 
     var tag = document.createElement('script');
 
@@ -50,6 +51,7 @@
     function onYouTubeIframeAPIReady() {
         var player = new YT.Player('player', {
             videoId: MEDIAPLAYER_VIDEO_ID,
+            startSeconds: MEDIAPLAYER_START_SEC,
             playerVars: {
                 autoplay: 1,
                 controls: 0,
