Add metastream request ad

--- a/html/app/request.html
+++ b/html/app/request.html
@@ -15,8 +15,14 @@
 </head>
 <body>
 
-    <div style="position:absolute;top:24px;left:0;right:0;bottom:0;">
+    <div style="position:absolute;top:0;left:0;right:0;bottom:0;">
         <section class="content-container">
+
+            <!-- data-href="#" data-overlay="true" onclick="selectService(this);" -->
+            <a href="https://getmetastream.com/?utm_source=mp-request&utm_medium=gmod&utm_campaign=validate" class="metastream">
+                Hey Media Player fans! The creator of this mod is making something new.
+                Check out <span class="metastream-link">getmetastream.com</span>!
+            </a>
 
             <h1>Share media from one of the selected services</h1>
 
