--- a/privacy.html
+++ b/privacy.html
@@ -8,4 +8,6 @@ and duration.
 
 The Media Player addon does use YouTube's Client API which requires
 you to agree to YouTube's privacy policy (<a href=https://policies.google.com/privacy>https://policies.google.com/privacy</a>).
+
+<a href=./request.html>Go back</a>
             </pre></section></div><link href="https://fonts.googleapis.com/css?family=Oswald" rel=stylesheet>
