--- a/html/app/request.html
+++ b/html/app/request.html
@@ -79,6 +79,7 @@
             </div>
 
             <div class="url-container">
+                <a href="./tos.html">Terms of Service</a>&nbsp;
                 <a href="./privacy.html">Privacy Policy</a>
             </div>
 
