--- a/html/app/tos.html
+++ b/html/app/tos.html
@@ -20,14 +20,11 @@
 
             <h1>Terms of Service</h1>
 
-            <!-- "And if you see Mr. Sundar, tell him I said **** you!" -->
             <pre style="max-width: 50%; white-space: pre-line;">
 Terms of Service
-Dated: May 23, 2020
+Dated: August 9, 2020
 
-You must agree to YouTube's Terms of Service (<a href="https://www.youtube.com/t/terms">https://www.youtube.com/t/terms</a>) to continue.
-
-You must also agree to the Media Player addon's <a href="./privacy.html">privacy policy.</a>
+You must agree to the Media Player addon's <a href="./privacy.html">privacy policy.</a>
             </pre>
 
             <button id="agree" type="button" style="color: black">I agree</button>
