--- a/html/app/request.html
+++ b/html/app/request.html
@@ -23,28 +23,28 @@
             <div class="services">
 
                 <span class="media-service logo-youtube"
-                      data-href="http://www.youtube.com/"
+                      data-href="https://www.youtube.com/"
                       data-name="YouTube"
                       data-service="yt"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">&nbsp;</span>
 
                 <span class="media-service subtext logo-twitch"
-                      data-href="http://www.twitch.tv/"
+                      data-href="https://www.twitch.tv/"
                       data-name="Twitch"
                       data-service="twv twl"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">&nbsp;</span>
 
                 <span class="media-service subtext logo-shoutcast"
-                      data-href="http://www.gmtower.org/apps/radio/"
+                      data-href="https://www.gmtower.org/apps/radio/"
                       data-name="SHOUTcast"
                       data-service="shc"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">SHOUTcast</span>
 
                 <span class="media-service subtext logo-soundcloud"
-                      data-href="http://soundcloud.com/search"
+                      data-href="https://soundcloud.com/search"
                       data-name="SoundCloud"
                       data-overlay="true"
                       data-service="sc"
@@ -52,14 +52,14 @@
                       onmouseover="hoverService();">&nbsp;</span>
 
                 <span class="media-service subtext logo-reddit"
-                      data-href="http://www.reddit.com/r/videos/"
+                      data-href="https://www.reddit.com/r/videos/"
                       data-name="/r/videos"
                       data-service="yt"
                       onclick="selectService(this);"
                       onmouseover="hoverService();">Videos</span>
 
                 <span class="media-service subtext logo-reddit"
-                      data-href="http://www.reddit.com/r/fullmoviesonyoutube/"
+                      data-href="https://www.reddit.com/r/fullmoviesonyoutube/"
                       data-name="/r/fullmoviesonyoutube"
                       data-service="yt"
                       onclick="selectService(this);"
