--- a/html/app/vimeo.html
+++ b/html/app/vimeo.html
@@ -28,7 +28,7 @@
 		var videoId = location.hash.substr(1);
 		if (!videoId.length) return;
 
-		var url = 'http://player.vimeo.com/video/',
+		var url = 'https://player.vimeo.com/video/',
 			params = '?api=1&player_id=player_1&autoplay=true';
 
 		console.info('Loading Vimeo player...');
